@@ -2,6 +2,7 @@
 ---------------------------
 - KO Fixed #493 (Unable to adjust "Depth Tolerance Chceck [sic] for Duplicate Points" Values)
 - KO Fixed #452 (PyDeadObject errors when opening Merge Duplicate Points dialog multiple times)
+- KO Fixed #482 (Hard to select a point with a line segment)
 
 1/20/2013
 ---------------------------
